# servicestack-rust

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md
.github/workflows/: ci.yml
examples/: authenticated_request.rs  basic_usage.rs  complete_example.rs  custom_method.rs
src/: client.rs  error.rs  lib.rs  traits.rs
tests/: integration_test.rs
