[package]
name = "servicestack"
version = "0.1.0"
edition = "2021"
authors = ["ServiceStack, Inc."]
license = "BSD-3-Clause"
description = "ServiceStack HTTP Client Library for Rust"
documentation = "https://docs.rs/servicestack"
repository = "https://github.com/ServiceStack/servicestack-rust"
homepage = "https://servicestack.net"
readme = "README.md"
keywords = ["servicestack", "http", "client", "api", "rest"]
categories = ["web-programming::http-client", "api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
