[package]
name = "servicestack"
version = "0.1.0"
edition = "2021"
authors = ["ServiceStack"]
description = "ServiceStack Rust Client Library - JsonServiceClient for making typed API requests"
license = "MIT"
repository = "https://github.com/ServiceStack/servicestack-rust"
keywords = ["servicestack", "rest", "api", "client", "json"]
categories = ["web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"
